<resources>
    <string name="app_name">Ribbit</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="login_username">username</string>
    <string name="login_password">password</string>
    <string name="login_btn">Log in</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="signup_email">E-mail</string>

    <string name="signup_error_message">Please make sure you enter a username, password and email address!</string>
    <string name="signup_error_title">Ooops!</string>

    <string name="login_error_message">Please make sure you enter a username, password!</string>
    <string name="login_error_title">Ooops!</string>
    <string name="action_logout">Logout</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">No friends yet!</string>
</resources>
